--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -14,5 +14,11 @@
         <li><b>Location: </b><%= listing.location %></li>
         <li><b>Country: </b><%= listing.country %></li>
     </ul>
+    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+    
+    <br><br>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+        <button>Delete this listing</button>
+    </form>
 </body>
 </html>
