--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,23 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listings</title>
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
     <h2>All Listings</h2>
 
-    <form method="GET" action="/listings/new">
+    <!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
-    </form>
+    </form> -->
     
+    <% for(listing of allListings) { %>
+    <div class="card" style="width: 18rem;">
+        <img src="<%= listing.image %>" class="card-img-top" alt="img">
+        <div class="card-body">
+            <p class="card-text" >
+                <b><%= listing.title.toUpperCase() %></b> <br>
+                <%= listing.description%> <br>
+                <span class="card-text-price">
+                    <span>&#8377;<%= listing.price.toLocaleString("en-IN") %></span>
+                    <span class="night"> / night</span>
+                </span>
+                
+            </p> 
+        </div>
+    </div>
+    <br><br>
+    <% } %>
+<!-- 
     <ul>
         <% for(listing of allListings) { %>
         <li> <a href="/listings/<%= listing._id %>"><%= listing.title %></a> </li>
         <% } %>
-    </ul>
+    </ul> -->
 
-    
 </body>
-</html>
