--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,30 +1,46 @@
 <% layout("/layouts/boilerplate") %>
-<body>
+<div class="row">
+    <div class="col-6 offset-3">
+        <br>
     <h3>Listing Details: </h3>
-    <ul>
-        <li><b>Title: </b> <%= listing.title %></li>
-        <li><b>Description: </b><%= listing.description %></li>
-        <li><b>Price: &#8377</b><%= listing.price.toLocaleString("en-IN") %></li>
-        <li><b>Location: </b><%= listing.location %></li>
-        <li><b>Country: </b><%= listing.country %></li>
-    </ul>
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+    <div class="card">
+        <img src="<%=listing.image %>" alt="listing-img"
+            class="card-img-top show-img">
+            <div class="card-body">
+                <p class="card-text">
+                    <b><%= listing.title %></b> <br>
+                    &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
+                    <%= listing.location %> <br>
+                    <%= listing.country %> <br>
+                </p>
+            </div>
+    </div>
+
+    <div class="btns">
+        <a href="/listings/<%= listing._id %>/edit"
+            class="btn btn-dark an-edit-btn ">Edit</a>
+        <br><br>
     
+        <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+            <button id="deleteForm" 
+                onclick="return confirmDelete()"
+                class="btn btn-dark offset-5">Delete</button>
+        </form>
+        
+    </div>
     <br><br>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button id="deleteForm" onclick="return confirmDelete()">Delete this listing</button>
-    </form>
+    
+</div>
+</div>
 
-    <script>
-        function confirmDelete(){
-            const isConfirmed = confirm("Are you Sure You Wanna del");
-            if(isConfirmed){
-                document.getElementById('deleteForm').submit();
-            }else{
-                alert("Deletion Cancelled");
-                return false;
-            }
+<script>
+    function confirmDelete(){
+        const isConfirmed = confirm("Are you Sure You Wanna del");
+        if(isConfirmed){
+            document.getElementById('deleteForm').submit();
+        }else{
+            alert("Deletion Cancelled");
+            return false;
         }
-
-    </script>
-</body>
+    }
+</script>
