--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,7 +10,10 @@
             class="needs-validation">
 
             <div class="mb-3">
-                <label for="title"class="form_label">Title</label>
+                <label for="title"
+                    class="form_label">
+                    Title
+                </label>
                 <input name="listing[title]"
                     placeholder="Enter Title" 
                     type="text"
