--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -10,7 +10,7 @@
     <% for(listing of allListings) { %>
         <a href="/listings/<%= listing.id %>"
             class="listing-click">
-            <div class="card col">
+            <div class="card col listing-card">
                 <img src="<%= listing.image %>" 
                     class="card-img-top" 
                     alt="img"
