--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,11 +1,11 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row">
-    <div class="col-6 offset-3">
+<div class="row mt-3">
+    <div class="col-8 offset-2">
         <br>
 
     <h3><%= listing.title %></h3>
 
-    <div class="card">
+    <div class="card listing-card col-7">
         <img src="<%=listing.image %>" alt="listing-img"
             class="card-img-top show-img">
             <div class="card-body">
@@ -66,17 +66,31 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
+
         <hr>
         <h4>All Reviews</h4>
-        <ul>
-            <p><%= listing.reviews %></p>
-            
-            <% for(review of listing.reviews) { %>
-                <li><%= review.comment %>
-                    <%= review.rating %> Stars
-                </li>
-            <% } %>
-        </ul>
+        <div class="row">
+        <% for(review of listing.reviews) { %>
+            <div class="card col-5 ms-4 me-4 mb-1 mt-3">
+                <div class="card-body">
+                    
+                    <h5 class="card-title mt-3">Jane Doe</h5>
+                    <p class="card-text">
+                        <%= review.comment %>
+                    </p>
+                    <p class="card-text">
+                        <%= review.rating %> Stars
+                    </p>
+                    
+                    <form class="mb-2" 
+                        action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" 
+                        method="POST">
+                        <button class="btn btn-sm btn-dark">Delete</button>
+                    </form>
+                </div>
+            </div>
+        <% } %>
+        </div>
     </div>
 </div>
 </div>
