--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,98 +1,85 @@
 <% layout("/layouts/boilerplate") %>
+
 <div class="row mt-3">
-    <div class="col-8 offset-2">
-        <br>
+    <div class="col-7 offset-2"><br>
 
-    <h3><%= listing.title %></h3>
-
-    <div class="card listing-card col-7">
-        <img src="<%=listing.image %>" alt="listing-img"
-            class="card-img-top show-img">
+        <h3 class="offset-2"><%= listing.title %></h3>
+        <div class="card listing-card col-7 offset-2 ">
+            <img src="<%=listing.image %>" 
+                alt="listing-img"
+                class="card-img-top show-img ">
+            
             <div class="card-body">
-                <p class="card-text">
-                    <br>
-                    &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
-                    <%= listing.location %> <br>
-                    <%= listing.country %> <br>
-                </p>
+                <p class="card-text"><i> Owned By <%= listing.owner.username %> </i></p>
+                <p class="card-text"> <%= listing.description %> </p>
+                <p class="card-text"> &#8377;<%= listing.price.toLocaleString("en-IN") %></p>
+                <p class="card-text"> <%= listing.location %> </p>
+                <p class="card-text"> <%= listing.country %> </p>    
             </div>
-    </div>
+        </div>
 
-    <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit"
-            class="btn btn-dark an-edit-btn ">Edit</a>
-        <br><br>
-    
-        <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-            <button id="deleteForm" 
-                onclick="return confirmDelete()"
-                class="btn btn-dark offset-5">Delete</button>
-        </form>   
-    </div>
-    <br><br>
-
-    <div class="col-12 mb-3">
-        <hr>
-        <h4>Leave Review</h4>
-
-        <form action="/listings/<%=listing.id%>/reviews"
-            method="POST"
-            novalidate
-            class="needs-validation">
-
-            <div class="mb-3 mt-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input type="range"
-                    min="1"
-                    max="5"
-                    id="rating"
-                    name="review[rating]"
-                    class="form-range">
-            </div>
-
-            <div class="mb-3 mt-3">
-                <label for="comment" class="form-label">Comments</label>
-                <textarea name="review[comment]"
-                    id="comment" 
-                    cols="30" 
-                    rows="4"
-                    class="form-control"
-                    placeholder="Leave Comments!!"
-                    required
-                ></textarea>
-                <div class="invalid-feedback"
-                    >Please Leave Reviews
-                </div>
-            </div>
-            <button class="btn btn-outline-dark">Submit</button>
-        </form>
-
-        <hr>
-        <h4>All Reviews</h4>
-        <div class="row">
-        <% for(review of listing.reviews) { %>
-            <div class="card col-5 ms-4 me-4 mb-1 mt-3">
-                <div class="card-body">
-                    
-                    <h5 class="card-title mt-3">Jane Doe</h5>
-                    <p class="card-text">
-                        <%= review.comment %>
-                    </p>
-                    <p class="card-text">
-                        <%= review.rating %> Stars
-                    </p>
-                    
-                    <form class="mb-2" 
-                        action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" 
-                        method="POST">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
-                </div>
-            </div>
+        <div class="btns offset-2">
+        <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
+            <a href="/listings/<%= listing._id %>/edit" 
+                class="btn btn-dark an-edit-btn "> Edit </a>
+        
+            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+                <button id="deleteForm" onclick="return confirmDelete()"
+                    class="btn btn-dark offset-3"> Delete </button>
+            </form>   
         <% } %>
+        </div> <br><br>
+
+        <div class="col-7 offset-2 mb-3">
+            <hr>
+            <% if(currUser) { %>
+                <h4>Leave Review</h4>
+
+                <form action="/listings/<%=listing.id%>/reviews" method="POST"
+                    novalidate class="needs-validation">
+
+                    <div class="mb-3 mt-3">
+                        <label for="rating" class="form-label">Rating</label>
+                        <input type="range" id="rating" min="1" max="5" 
+                            name="review[rating]"
+                            class="form-range">
+                    </div>
+
+                    <div class="mb-3 mt-3">
+                        <label for="comment" class="form-label">Comments</label>
+                        
+                        <textarea name="review[comment]" id="comment" cols="30" rows="4"
+                            placeholder="Leave Comments!!"
+                            class="form-control" required></textarea>
+
+                        <div class="invalid-feedback"> Please Leave Reviews </div>
+                    </div>
+                    
+                    <button class="btn btn-outline-dark">Submit</button>
+                </form> <hr>
+            <% } %>
+
+            <h4>All Reviews</h4>
+            <div class="row">
+                <% for (review of listing.reviews) { %>
+                    <div class="card col-5 ms-4 mb-1 mt-3">
+                        <div class="card-body">
+
+                            <h5 class="card-title mt-3">@ <%= review.author.username %></h5>
+                            <p class="card-text"> <%= review.comment %> </p>
+                            <p class="card-text"> <%= review.rating %> Stars </p>
+                        
+                            <form class="mb-2" 
+                                action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" 
+                                method="POST">
+                                <button class="btn btn-sm btn-dark">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                <% } %>
+            </div>
         </div>
     </div>
-</div>
 </div>
 
 <script>
