--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -24,7 +24,7 @@
             <div class="navbar-nav ms-auto">
                 <!-- login -->
                 <% if(!currUser) { %>
-                    <a class="nav-link" href="/signup">Sign In</a>
+                    <a class="nav-link" href="/signup">Register</a>
                     <a class="nav-link" href="/login">Log In</a>
                 <% } %>
                 <!-- logout -->
