--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,36 +1,35 @@
 <% layout("/layouts/boilerplate") %>
-<br> 
-    <h2>All Listings</h2>
+<br />
+<h2>All Listings</h2>
 
-    <!-- <form method="GET" action="/listings/new">
+<!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
     </form> -->
-    
+
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-    <% for(listing of allListings) { %>
-        <a href="/listings/<%= listing.id %>"
-            class="listing-click">
-            <div class="card col listing-card">
-                <img src="<%= listing.image %>" 
-                    class="card-img-top" 
-                    alt="img"
-                    style="height:20rem;">
-                <div class="card-img-overlay"></div>
-                <div class="card-body">
-                    <p class="card-text" >
-                        <b><%= listing.title.toUpperCase() %></b> 
-                        <br>
-                        <%= listing.description%> 
-                        <br>
-                        <span class="card-text-price">
-                            <span>&#8377;<%= listing.price.toLocaleString("en-IN") %></span>
-                            <span class="night"> / night</span>
-                        </span>   
-                    </p> 
-                </div>
-            </div>
-        </a>
-    <% } %>
+  <% for(listing of allListings) { %>
+  <a href="/listings/<%= listing.id %>" class="listing-click">
+    <div class="card col listing-card">
+      <img
+        src="<%= listing.image %>"
+        class="card-img-top"
+        alt="img"
+        style="height: 20rem"
+      />
+      <div class="card-img-overlay"></div>
+      <div class="card-body">
+        <p class="card-text">
+          <b><%= listing.title.toUpperCase() %></b>
+          <br/>
+          <%= listing.description%>
+          <br/>
+          <span class="card-text-price">
+            <span>&#8377;<%= listing.price.toLocaleString("en-IN") %></span>
+            <span class="night"> / night</span>
+          </span>
+        </p>
+      </div>
+    </div>
+  </a>
+  <% } %>
 </div>
-
-
