--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,95 +1,158 @@
 <% layout("/layouts/boilerplate") %>
 
 <div class="row mt-3">
-    <div class="col-7 offset-2"><br>
+  <div class="col-7 offset-2">
+    <br />
 
-        <h3 class="offset-2"><%= listing.title %></h3>
-        <div class="card listing-card col-7 offset-2 ">
-            <img src="<%=listing.image %>" 
-                alt="listing-img"
-                class="card-img-top show-img ">
-            
-            <div class="card-body">
-                <p class="card-text"><i> Owned By <%= listing.owner.username %> </i></p>
-                <p class="card-text"> <%= listing.description %> </p>
-                <p class="card-text"> &#8377;<%= listing.price.toLocaleString("en-IN") %></p>
-                <p class="card-text"> <%= listing.location %> </p>
-                <p class="card-text"> <%= listing.country %> </p>    
-            </div>
-        </div>
+    <h3 class="offset-2"><%= listing.title %></h3>
+    <div class="card listing-card col-7 offset-2">
+      <img
+        src="<%=listing.image %>"
+        alt="listing-img"
+        class="card-img-top show-img"
+      />
 
-        <div class="btns offset-2">
-        <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
-            <a href="/listings/<%= listing._id %>/edit" 
-                class="btn btn-dark an-edit-btn "> Edit </a>
-        
-            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-                <button id="deleteForm" onclick="return confirmDelete()"
-                    class="btn btn-dark offset-3"> Delete </button>
-            </form>   
-        <% } %>
-        </div> <br><br>
-
-        <div class="col-7 offset-2 mb-3">
-            <hr>
-            <% if(currUser) { %>
-                <h4>Leave Review</h4>
-
-                <form action="/listings/<%=listing.id%>/reviews" method="POST"
-                    novalidate class="needs-validation">
-
-                    <div class="mb-3 mt-3">
-                        <label for="rating" class="form-label">Rating</label>
-                        <input type="range" id="rating" min="1" max="5" 
-                            name="review[rating]"
-                            class="form-range">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="comment" class="form-label">Comments</label>
-                        
-                        <textarea name="review[comment]" id="comment" cols="30" rows="4"
-                            placeholder="Leave Comments!!"
-                            class="form-control" required></textarea>
-
-                        <div class="invalid-feedback"> Please Leave Reviews </div>
-                    </div>
-                    
-                    <button class="btn btn-outline-dark">Submit</button>
-                </form> <hr>
-            <% } %>
-
-            <h4>All Reviews</h4>
-            <div class="row">
-                <% for (review of listing.reviews) { %>
-                    <div class="card col-5 ms-4 mb-1 mt-3">
-                        <div class="card-body">
-
-                            <h5 class="card-title mt-3">@ <%= review.author.username %></h5>
-                            <p class="card-text"> <%= review.comment %> </p>
-                            <p class="card-text"> <%= review.rating %> Stars </p>
-                        
-                            <form class="mb-2" 
-                                action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" 
-                                method="POST">
-                                <button class="btn btn-sm btn-dark">Delete</button>
-                            </form>
-                        </div>
-                    </div>
-                <% } %>
-            </div>
-        </div>
+      <div class="card-body">
+        <p class="card-text"><i> Owned By <%= listing.owner.username %> </i></p>
+        <p class="card-text"><%= listing.description %></p>
+        <p class="card-text">
+          &#8377;<%= listing.price.toLocaleString("en-IN") %>
+        </p>
+        <p class="card-text"><%= listing.location %></p>
+        <p class="card-text"><%= listing.country %></p>
+      </div>
     </div>
+
+    
+    <div class="btns offset-2">
+      <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
+      <a
+        href="/listings/<%= listing._id %>/edit"
+        class="btn btn-dark an-edit-btn"
+      > Edit
+      </a>
+
+      <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+        <button
+          id="deleteForm"
+          onclick="return confirmDelete()"
+          class="btn btn-dark offset-3"
+        >
+          Delete
+        </button>
+      </form>
+      <% } %>
+    </div>
+    <br /><br />
+
+    
+    <div class="col-7 offset-2 mb-3">
+      <hr />
+      <% if(currUser) { %>
+      <h4>Leave Review</h4>
+
+      <form
+        action="/listings/<%=listing.id%>/reviews"
+        method="POST"
+        novalidate
+        class="needs-validation"
+      >
+        <!-- <div class="mb-3 mt-3">
+          <label for="rating" class="form-label">Rating</label>
+          <input
+            type="range"
+            id="rating"
+            min="1"
+            max="5"
+            name="review[rating]"
+            class="form-range"
+          />
+        </div> -->
+
+        <div class="mb-3 mt-3">
+          <label for="rating" class="form-label">Rating</label>
+          <fieldset class="starability-grow">
+            
+            <!-- default -->
+            <input
+              type="radio"
+              id="no-rate"
+              class="input-no-rate"
+              name="review[rating]"
+              value="1"
+              checked
+              aria-label="No rating."
+            />
+
+            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+            <label for="first-rate1" title="Terrible">1 star</label>
+
+            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+            <label for="first-rate2" title="Not good">2 stars</label>
+
+            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+            <label for="first-rate3" title="Average">3 stars</label>
+
+            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+            <label for="first-rate4" title="Very good">4 stars</label>
+
+            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+            <label for="first-rate5" title="Amazing">5 stars</label>
+          </fieldset>
+        </div>
+
+        <div class="mb-3 mt-3">
+          <label for="comment" class="form-label">Comments</label>
+
+          <textarea
+            name="review[comment]"
+            id="comment"
+            cols="30"
+            rows="4"
+            placeholder="Leave Comments!!"
+            class="form-control"
+            required
+          ></textarea>
+
+          <div class="invalid-feedback">Please Leave Reviews</div>
+        </div>
+
+        <button class="btn btn-outline-dark">Submit</button>
+      </form>
+      <hr />
+      <% } %>
+
+      <h4>All Reviews</h4>
+      <div class="row">
+        <% for (review of listing.reviews) { %>
+        <div class="card col-5 ms-4 mb-1 mt-3">
+          <div class="card-body">
+            <h5 class="card-title mt-3">@ <%= review.author.username %></h5>
+            <p class="starability-result card-text" data-rating= <%= review.rating %> ></p>
+            <p class="card-text"><%= review.comment %></p>
+            <form
+              class="mb-2"
+              action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+              method="POST"
+            >
+              <button class="btn btn-sm btn-dark">Delete</button>
+            </form>
+          </div>
+        </div>
+        <% } %>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
-    function confirmDelete(){
-        const isConfirmed = confirm("Are you Sure You Wanna del");
-        if(isConfirmed){
-            document.getElementById('deleteForm').submit();
-        }else{
-            alert("Deletion Cancelled");
-            return false;
-        }
+  function confirmDelete() {
+    const isConfirmed = confirm("Are you Sure You Wanna del");
+    if (isConfirmed) {
+      document.getElementById("deleteForm").submit();
+    } else {
+      alert("Deletion Cancelled");
+      return false;
     }
+  }
 </script>
