--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -11,7 +11,7 @@
   <a href="/listings/<%= listing.id %>" class="listing-click">
     <div class="card col listing-card">
       <img
-        src="<%= listing.image %>"
+        src="<%= listing.image.url %>"
         class="card-img-top"
         alt="img"
         style="height: 20rem"
