--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,7 +7,7 @@
     <h3 class="offset-2"><%= listing.title %></h3>
     <div class="card listing-card col-7 offset-2">
       <img
-        src="<%=listing.image %>"
+        src="<%=listing.image.url %>"
         alt="listing-img"
         class="card-img-top show-img"
       />
